added periodic update of order status, added order cancellation, implemented return to the form being filled in case of forced redirect